--- a/doc/doxygen.css
+++ b/doc/doxygen.css
@@ -1,236 +1,325 @@
-body {
-  background: white;
-  color: black;
-  margin: 10px;
-  font-family: trebuchet ms,luxi sans,sans-serif;
+BODY,H1,H2,H3,H4,H5,H6,P,CENTER,TD,TH,UL,DL,DIV {
+	font-family: trebuchet ms, luxi sans, Geneva, Arial, Helvetica, sans-serif;
+	margin: 2px 0px 10px 0px;
 }
-h1 {
-  text-align: center;
+BODY,TD {
+       font-size: 90%;
 }
-h2 {
-  color: #003;
-  font-size: medium;
-  background-color: #DDF;
-  padding : 0px 0px 1px 30px;
-  border: 1px solid #AAC;
+H1 {
+	text-align: center;
+       font-size: 160%;
 }
-h3 {
-  color: #003;
-  font-size: medium;
-  margin : 30px 0px 0px 30px;
-  border-bottom:1px solid #BBC;
+H2 {
+    color: #003;
+    font-size: medium;
+    background-color: #DDF;
+    padding : 2px 0px 1px 30px;
+    border: 1px solid #AAC;
+    font-size: 110%;
 }
-
+H3 {
+    font-size: 100%;
+    color: #003;
+    margin : 30px 0px 0px 30px;
+    border-bottom:1px solid #BBC;
+}
+CAPTION { font-weight: bold }
+hr { display:none; } 
 DIV.qindex {
-  width: 98%;
-  background-color: #EEEEFF;
-  border: 2px solid #AAAACC;
-  text-align: center;
-  padding: 2px;
-  margin: 0px 5px;
-  line-height: 140%;
+	width: 100%;
+	background-color: #e8eef2;
+	border: 1px solid #84b0c7;
+	text-align: center;
+	margin: 2px;
+	padding: 2px;
+	line-height: 140%;
 }
-A {
-  text-decoration: none;
-  font-weight: normal;
-  color: #44B;
+DIV.nav {
+	display:none;
+	width: 100%;
+	background-color: #e8eef2;
+	border: 1px solid #84b0c7;
+	text-align: center;
+	margin: 2px;
+	padding: 2px;
+	line-height: 140%;
 }
-A.visited {
-  color: #44B;
+DIV.navtab {
+       background-color: #e8eef2;
+       border: 1px solid #84b0c7;
+       text-align: center;
+       margin: 2px;
+       margin-right: 15px;
+       padding: 2px;
+}
+TD.navtab {
+       font-size: 70%;
 }
 A.qindex {
-  font-weight: bold;
-  color: #0000AA;
-  padding: 0px 10px 1px 10px;
-  margin: 1px 2%;
-  border: 1px solid #EEEEFF;
+       text-decoration: none;
+       font-weight: bold;
+       color: #1A419D;
 }
-A.qindexHL {
-  font-weight: bold;
-  color: #FFF;
-  background-color: #9999CC;
-  padding: 0px 10px 1px 10px;
-  margin: 1px 2%;
-  border: 1px solid #000;
+A.qindex:visited {
+       text-decoration: none;
+       font-weight: bold;
+       color: #1A419D
 }
 A.qindex:hover {
-  background-color: #BBD;
-  color: #FFF;
-  border: 1px solid #66A
+	text-decoration: none;
+	background-color: #ddddff;
+}
+A.qindexHL {
+	text-decoration: none;
+	font-weight: bold;
+	background-color: #6666cc;
+	color: #ffffff;
+	border: 1px double #9295C2;
 }
 A.qindexHL:hover {
-  background-color: #BBD;
-  border: 1px solid #004;
+	text-decoration: none;
+	background-color: #6666cc;
+	color: #ffffff;
 }
-A.el {
-  font-weight: normal;
-  color: #66A;
+A.qindexHL:visited { text-decoration: none; background-color: #6666cc; color: #ffffff }
+A { text-decoration: none; font-weight: bold }
+A.elRef { font-weight: bold }
+A.code:link { text-decoration: none; font-weight: normal; color: #0000FF}
+A.code:visited { text-decoration: none; font-weight: normal; color: #0000FF}
+A.codeRef:link { font-weight: normal; color: #0000FF}
+A.codeRef:visited { font-weight: normal; color: #0000FF}
+A:hover { text-decoration: none; background-color: #f2f2ff }
+DL.el { margin-left: -1cm }
+.fragment {
+       font-family: monospace, fixed;
+       font-size: 95%;
 }
-A.code {
-  font-weight: normal;
-  color: #1A419D;
-}
-A.alpha {
-  font-weight: bold;
-  color: #0000AA;
-  padding: 0px 10px 1px 10px;
-  border: 1px solid #EEEEFF;
-  margin: 1px 4px;
-}
-A.alphaHL {
-  font-weight: bold;
-  color: #0000AA;
-  padding: 0px 10px 1px 10px;
-  margin: 1px 4px;
-  border: 1px solid #000;
-  background-color: #99C;
-}
-A.alpha:hover {
-  background-color: #BBD;
-  color: #FFF;
-  border: 1px solid #66A
-}
-A:hover {
-  background-color: #F2F2FF;
-}
-
-
+pre { margin:0px; padding:3px; }
 PRE.fragment {
-  border: 1px solid #CCC;
-  border-bottom: 2px solid #888;
-  border-right: 3px solid #888;
-  background-color: #F5F5F5;
-  padding: 4px;
-  margin: 0px 20px 0px 25px;
+
+	  border: 1px solid #CCC;
+	    border-bottom: 2px solid #888;
+	      border-right: 3px solid #888;
+	        background-color: #F5F5F5;
+		  padding: 4px;
+		    margin: 0px 20px 0px 25px;
 }
-pre {
-  margin: 0px;
-  padding: 3px;
+DIV.ah { background-color: black; font-weight: bold; color: #ffffff; margin-bottom: 3px; margin-top: 3px }
+
+DIV.groupHeader {
+       margin-left: 16px;
+       margin-top: 12px;
+       margin-bottom: 6px;
+       font-weight: bold;
 }
-TD.md {
-  font-weight: bold;
-}
-TD.mdname1 {
-  font-weight: bold;
-  color: #622;
-}
-TD.mdname {
-  font-weight: bold;
-  color: #622;
-  width: 600px;
+DIV.groupText { margin-left: 16px; font-style: italic; font-size: 90% }
+BODY {
+	background: white;
+	color: black;
+	margin-right: 20px;
+	margin-left: 20px;
 }
 TD.indexkey {
-  background-color: #EEEEFF;
-  font-weight    : bold;
-  padding        : 2px 10px;
-  margin         : 2px 0px;
-  border: 1px solid #CCC
+	font-weight: bold;
+	padding  : 2px 10px;
+	margin : 0px 2px;
+	border-bottom: 1px solid #CCC;
 }
 TD.indexvalue {
-  background-color: #EEEEFF;
-  font-style: italic;
-  padding        : 2px 10px;
-  margin         : 2px 0px;
-  border: 1px solid #CCC
+	padding : 2px 10px;
+	margin : 0px 2px;
+	border-bottom: 1px solid #CCC;
 }
 TR.memlist {
-  background-color: #FFF;
+   background-color: #f0f0f0; 
 }
+P.formulaDsp { text-align: center; }
+IMG.formulaDsp { }
+IMG.formulaInl { vertical-align: middle; }
 SPAN.keyword       { color: #008000 }
 SPAN.keywordtype   { color: #604020 }
-SPAN.keywordflow   { color: #E08000 }
+SPAN.keywordflow   { color: #e08000 }
 SPAN.comment       { color: #800000 }
 SPAN.preprocessor  { color: #806020 }
 SPAN.stringliteral { color: #002080 }
 SPAN.charliteral   { color: #008080 }
-.mdTable {
-  padding-top: 10px;
-  width: 100%;
-  border-top: 2px solid #44A;
-}
-.mdRow {
-  padding: 8px 10px;
-}
 .mdescLeft {
-  font-size: smaller;
-  font-style: italic;
-  padding-left: 8px;
-  border: 1px none #E0E0E0;
-  margin: 0px;
+       padding: 0px 8px 4px 8px;
+	font-size: 80%;
+	font-style: italic;
+	background-color: #FAFAFA;
+	border-top: 1px none #E0E0E0;
+	border-right: 1px none #E0E0E0;
+	border-bottom: 1px none #E0E0E0;
+	border-left: 1px none #E0E0E0;
+	margin: 0px;
 }
 .mdescRight {
-  font-size: smaller;
-  font-style: italic;
-  padding-left: 4px;
-  border: 1px none #E0E0E0;
-  margin: 0px;
-  padding-bottom: 0px;
-  padding-right: 8px;
+       padding: 0px 8px 4px 8px;
+	font-size: 80%;
+	font-style: italic;
+	background-color: #FAFAFA;
+	border-top: 1px none #E0E0E0;
+	border-right: 1px none #E0E0E0;
+	border-bottom: 1px none #E0E0E0;
+	border-left: 1px none #E0E0E0;
+	margin: 0px;
 }
 .memItemLeft {
-  padding: 1px 0px 0px 8px;
-  margin: 4px;
-  border-bottom: 1px solid #EEE;
-  font-family: Geneva, Arial, Helvetica, sans-serif;
-  font-size: small;
+	padding: 1px 0px 2px 8px;
+	margin: 4px;
+	border-bottom: 1px solid #EEE;
+	font-size: 80%;
 }
 .memItemRight {
-  padding: 1px 0px 0px 8px;
-  margin: 4px;
-  border-bottom: 1px solid #EEE;
-  font-family: Geneva, Arial, Helvetica, sans-serif;
-  font-size: small;
+	padding: 1px 8px 2px 8px;
+	margin: 4px;
+	border-bottom: 1px solid #EEE;
+	font-size: 80%;
 }
 .memTemplItemLeft {
-  padding: 1px 0px 0px 8px;
-  margin: 4px;
-  border-bottom: 1px solid #EEE;
-  font-family: Geneva, Arial, Helvetica, sans-serif;
-  font-size: small;
+	padding: 1px 0px 0px 8px;
+	margin: 4px;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	border-top-color: #E0E0E0;
+	border-right-color: #E0E0E0;
+	border-bottom-color: #E0E0E0;
+	border-left-color: #E0E0E0;
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: none;
+	border-left-style: none;
+	background-color: #FAFAFA;
+	font-size: 80%;
 }
 .memTemplItemRight {
-  padding: 1px 0px 0px 8px;
-  margin: 4px;
-  border-bottom: 1px solid #EEE;
-  font-family: Geneva, Arial, Helvetica, sans-serif;
-  font-size: small;
+	padding: 1px 8px 0px 8px;
+	margin: 4px;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	border-top-color: #E0E0E0;
+	border-right-color: #E0E0E0;
+	border-bottom-color: #E0E0E0;
+	border-left-color: #E0E0E0;
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: none;
+	border-left-style: none;
+	background-color: #FAFAFA;
+	font-size: 80%;
 }
 .memTemplParams {
-  padding: 1px 0px 0px 8px;
-  margin: 4px;
-  border-bottom: 1px solid #EEE;
-  font-family: Geneva, Arial, Helvetica, sans-serif;
-  font-size: small;
+	padding: 1px 0px 0px 8px;
+	margin: 4px;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	border-top-color: #E0E0E0;
+	border-right-color: #E0E0E0;
+	border-bottom-color: #E0E0E0;
+	border-left-color: #E0E0E0;
+	border-top-style: solid;
+	border-right-style: none;
+	border-bottom-style: none;
+	border-left-style: none;
+       color: #606060;
+	background-color: #FAFAFA;
+	font-size: 80%;
+}
+.search     { color: #003399;
+              font-weight: bold;
+}
+FORM.search {
+              margin-bottom: 0px;
+              margin-top: 0px;
+}
+INPUT.search { font-size: 75%;
+               color: #000080;
+               font-weight: normal;
+               background-color: #e8eef2;
+}
+TD.tiny      { font-size: 75%;
+}
+a {
+	color: #1A41A8;
+}
+a:visited {
+	color: #2A3798;
+}
+.dirtab { padding: 4px;
+          border-collapse: collapse;
+          border: 1px solid #84b0c7;
+}
+TH.dirtab { background: #e8eef2;
+            font-weight: bold;
+}
+HR { height: 1px;
+     border: none;
+     border-top: 1px solid black;
 }
 
-FORM.search {
-  color: #00A;
-  font-weight: bold;
-  margin: 1px;
-}
-span.search {
-  margin: 2px 4%;
-}
-input.search {
-  font-size: 75%;
-  color: #008;
+/* Style for detailed member documentation */
+.memtemplate {
+  font-size: 80%;
+  color: #606060;
   font-weight: normal;
-  padding: 2px 4px;
-  margin: 0px 7px;
-  border: 1px solid #BBD;
-  background-color: #FFE;
+} 
+.memnav { 
+  background-color: #e8eef2;
+  border: 1px solid #84b0c7;
+  text-align: center;
+  margin: 2px;
+  margin-right: 15px;
+  padding: 2px;
 }
-TD.tiny {
-  font-size: 75%
+.memitem {
+  padding: 0px;
+  padding-top: 16px;
+  padding-bottom: 6px;
+  background-color: white;
+  border: 0;
+  border-top: 2px solid #44A;
 }
-hr {
-  height: 30px;
-  background-color: #FFF;
-  border: none;
-  color: #FFF;
+.memname {
+  white-space: nowrap;
+  font-weight: bold;
 }
-code {
-  font-family: courier, sans-serif;
-  color: #083;
-  font-size: medium;
+.memdoc{
+  padding-left: 10px;
 }
+.memproto {
+  background-color: white;
+  width: 100%;
+  border: 0;
+  font-weight: bold;
+}
+.paramkey {
+  text-align: right;
+}
+.paramtype {
+  white-space: nowrap;
+}
+.paramname {
+  color: #602020;
+  font-style: italic;
+  white-space: nowrap;
+}
+/* End Styling for detailed member documentation */
+
+/* for the tree view */
+.ftvtree {
+	font-family: sans-serif;
+	margin:0.5em;
+}
+.directory { font-size: 9pt; font-weight: bold; }
+.directory h3 { margin: 0px; margin-top: 1em; font-size: 11pt; }
+.directory > h3 { margin-top: 0; }
+.directory p { margin: 0px; white-space: nowrap; }
+.directory div { display: none; margin: 0px; }
+.directory img { vertical-align: -30%; }
