--- a/examples/contribs/agora/agoraWindow.Qt3.ui
+++ b/examples/contribs/agora/agoraWindow.Qt3.ui
@@ -586,6 +586,6 @@
 </connections>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
-    <includehint>agoraviewer.h</includehint>
+    <includehint>agoraViewer.h</includehint>
 </includehints>
 </UI>
