--- a/doc/qglviewer.css
+++ b/doc/qglviewer.css
@@ -3,10 +3,11 @@ body {
   color: black;
   font-family: luxi sans,sans-serif;
   text-align: justify;
-  margin: 5px 10px
+  margin: 5px 10px;
 }
 
-h1 { text-align: center }
+h1 { text-align: center; }
+h1 img { vertical-align:middle; }
 
 h2 {
   color: #003;
@@ -14,8 +15,10 @@ h2 {
   background-color: #ddddff;
   padding : 2px 0px 2px 20px;
   margin-top : 50px;
-  border:1px solid #aaaacc
+  border:1px solid #aaaacc;
 }
+
+h2 img { vertical-align:middle; }
 
 h3 {
   color: #003;
@@ -24,7 +27,7 @@ h3 {
   margin-left : 5px;
   padding-left : 10px;
   padding-top : 2px;
-  border:1px solid #aaaacc
+  border:1px solid #aaaacc;
 }
 
 pre {
@@ -38,17 +41,17 @@ pre {
 
 code { color:#083; }
 
-A { text-decoration: none; color : #4444FF }
-A:hover { background-color: #f2f2ff }
+A { text-decoration: none; color : #4444FF; }
+A:hover { background-color: #f2f2ff; }
 
-img { border-width:0px }
+img { border-width:0px; }
 
 div.banner {
   width: 98%;
   background-color: #eef;
   border: 2px solid #AAC;
   text-align: center;
-  padding:4px
+  padding:4px;
 }
 
 a.qindex {
@@ -56,23 +59,29 @@ a.qindex {
        color: #0000AA;
        padding: 0px 10px 1px 10px;
        margin: 1px 2%;
-       border: 1px solid #eef
+       border: 1px solid #eef;
 }
 a.highlight {
 	color: #FFF;
 	background-color: #99c;
-	border-color: #000
+	border-color: #000;
 }
 a.qindex:hover {
 	background-color: #bbd;
 	color: #FFFFFF;
-	border: 1px solid #66a
+	border: 1px solid #66a;
 }
 
 div.summary {
   background-color: #eef;
   border: 1px solid #AAC;
   padding: 4px 0px 0px 20px;
-  margin: 5px 20% 0px 20%
+  margin: 5px 20% 0px 20%;
 }
 
+span.redStar { color:red; font-size:x-large; }
+
+table.blue { border-collapse:collapse; border-spacing:0; border:1px solid #66a; }
+table.blue th { background-color:#66a; color:#eef; text-align:center; }
+table.blue td { background-color:#ddf; padding:2px 16px; }
+table.blue tr.even td { background-color:#bbd; }
